WebCore/svg/SVGFilterElement.h
@@ -72,7 +72,11 @@ namespace WebCore {
                                        SVGNames::externalResourcesRequiredAttrString, bool,
                                        ExternalResourcesRequired, externalResourcesRequired)
 
-        RefPtr<SVGResourceFilter> m_filter;
+        mutable RefPtr<SVGResourceFilter> m_filter;
+
+    private:
+        friend class SVGResourceFilter;
+        void buildFilter(const FloatRect& targetRect) const;
     };
 
 } // namespace WebCore
